birdcam-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdcam
  namespace: birdcam
  labels:
    app: birdcam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: birdcam
  template:
    metadata:
      labels:
        app: birdcam
    spec:
      containers:
      - name: birdcam
        image: golang
        command: ["sh"]
        args: ["-c", "go get github.com/danhigham/birdcam/httpserver && cd $GOPATH/src/github.com/danhigham/birdcam/httpserver && go run main.go"]
        ports:
        - containerPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: birdcam-stream
  namespace: birdcam
  labels:
    app: birdcam-stream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: birdcam-stream
  template:
    metadata:
      labels:
        app: birdcam-stream
    spec:
      containers:
      - name: videostreamer
        image: danhigham/videostreamer
        command: ["videostreamer"]
        args: ["-verbose=false", "-fcgi=false", "-format=rtsp", "-input=$(INPUT_STREAM)"]
        ports:
        - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  namespace: birdcam
  name: birdcam-http
spec:
  selector:
    app: birdcam
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
kind: Service
apiVersion: v1
metadata:
  namespace: birdcam
  name: birdcam-stream-http
spec:
  selector:
    app: birdcam-stream
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: birdcam
  name: birdcam-ingress
spec:
  tls:
  - hosts:
    - birdcam.high.am
    secretName: higham-secret
  rules:
  - host: birdcam.high.am
    http:
      paths:
      - path: /stream
        backend:
          serviceName: birdcam-stream-http
          servicePort: 8080
      - path: /
        backend:
          serviceName: birdcam-http
          servicePort: 8080
